# Face-Recognition

./: .gitignore  CMakeLists.txt  README.md
data/models/: Sphereface.xml  face-detection-retail-0005.xml  landmarks-regression-retail-0009.xml
face_exe/: CMakeLists.txt
face_exe/src/: main.cpp
face_lib/: CMakeLists.txt
face_lib/include/: CentroidTracker.h  Face.h  FaceDNN.h  FaceDetails.h  FaceDetector.h  FaceEmbedding.h  FaceLandmark.h  HungarianAlg.h  LoadModel.h  ModelParameters.h  Track.h
face_lib/src/: CentroidTracker.cpp  Face.cpp  FaceDNN.cpp  FaceDetector.cpp  FaceEmbedding.cpp  FaceLandmark.cpp  HungarianAlg.cpp  LoadModel.cpp
